@@ -142,6 +142,10 @@ HISTORY
   ++ Bugfixes:
 
   2010-03-05: Simon Goldschmidt
+  * dhcp.c: Fixed bug #29072: Correctly set ciaddr based on message-type
+    and state.
+
+  2010-03-05: Simon Goldschmidt
   * api_msg.c: Correctly set TCP_WRITE_FLAG_MORE when netconn_write is split
     into multiple calls to tcp_write.    
 
